# AppConfig

./: .gitignore  AppConfig.cabal  LICENSE  README.md  cabal.sandbox.config  stack.yaml
example/: email.cfg  example.hs
src/: AppConfig.hs  AppSpec.hs  email.cfg
