

name:                AppConfig
version:             0.1.0.0
synopsis:            Application state from configuration file.         
description:         Allows setting of application configuration, eg a port nummber or an email server address etc., from an external config file
license:             GPL-2
license-file:        LICENSE
author:              mike-k-houghton
maintainer:          mike_k_houghton@yahoo.co.uk
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules: AppConfig    
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8, split
  hs-source-dirs:      src
  default-language:    Haskell2010