

name:                AppConfig
version:             0.1.0.0
synopsis:            Application state from configuration file.         
description:         Allows setting of application configuration, eg a port nummber or an email server address etc., from an external config file
homepage:            https://github.com/mike-k-houghton/AppConfig
license:             MIT
license-file:        LICENSE
category:            Distribution
author:              Mike Houghton
maintainer:          mike_k_houghton@yahoo.co.uk
copyright:           Copyright (c) 2015 Mike Houghton 
category:            Configuration           
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10
Source-repository head
    Type:     git
    Location: https://github.com/mike-k-houghton/AppConfig.git
library
  exposed-modules: AppConfig    
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8, split
  hs-source-dirs:      src
  default-language:    Haskell2010

